--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    
+    "react-router-dom": "^6.23.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
