--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap-icons": "^1.11.4",
